# kubectl

./: Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: build.yaml  documentation.yaml  periodical.yml
watcher/: README.md  main.py  pyproject.toml
